--- a/public/filmes.html
+++ b/public/filmes.html
@@ -1,30 +1,77 @@
+</body>
+
+</html>
 <!DOCTYPE html>
-<html>
+<html lang="pt">
 
 <head>
 	<meta charset="UTF-8">
-	<title>Filmes</title>
+	<title>Gestão de Filmes e Séries</title>
 	<link rel="stylesheet" href="css/default.css">
 </head>
 
 <body>
 
 	<header>
-		<h1>Filmes</h1>
-		<a href="index.html">⬅ Voltar à Home</a>
+		<h1>Gestão de Filmes e Séries</h1>
+
+		<nav>
+			<a href="index.html">Home</a>
+			<a href="filmes.html">Filmes</a>
+			<a href="series.html">Séries</a>
+			<a href="reviews.html">Reviews</a>
+			<a href="favoritos.html">Favoritos</a>
+			<a href="#" id="btnLogin">Login</a>
+		</nav>
 	</header>
 
-	<button onclick="carregarFilmes()">Carregar Filmes</button>
-	<pre id="output"></pre>
+	<section class="section">
+		<h2>Trending</h2>
 
-	<script>
-		async function carregarFilmes() {
-			const resposta = await fetch('/api/filmes');
-			const dados = await resposta.json();
-			document.getElementById('output').innerText =
-				JSON.stringify(dados, null, 2);
-		}
-	</script>
+		<div class="movies" id="listaFilmes"></div>
+	</section>
+
+	<footer>
+		<p>
+			Projeto de Programação e Integração de Serviços<br>
+			CTeSP TPSI – 2025/2026
+		</p>
+	</footer>
+
+	<form class="search-container" action="/search" method="GET">
+		<input type="text" placeholder="Pesquisar..." name="query" required>
+		<button type="submit">Buscar</button>
+	</form>
+
+	<!--Login-->
+	<div id="authModal" class="modal">
+		<div class="modal-content">
+			<span class="close" id="closeModal">&times;</span>
+
+			<!-- form do login -->
+			<div id="loginForm">
+				<h2>Bem-vindo!</h2>
+				<input type="email" placeholder="Email" id="loginemail">
+				<input type="password" placeholder="Password" id="loginpassword">
+				<button id="submitLogin">Login</button>
+				<p>Ainda não tens conta? <span class="link" id="showRegister">Criar conta</span></p>
+			</div>
+
+			<!-- form do register -->
+			<div id="registerForm" style="display:none;">
+				<h2>Criar conta</h2>
+				<input type="text" placeholder="Nome" id="name">
+				<input type="email" placeholder="Email" id="email">
+				<input type="password" placeholder="Password" id="password">
+				<button id="submitRegister">Registar</button>
+				<p>Já tens conta? <span class="link" id="showLogin">Login</span></p>
+			</div>
+		</div>
+	</div>
+
+	<script src="js/auth.js"></script>
+	<script src="js/index.js"></script>
+	<script src="js/filmes.js"></script>
 
 </body>
 
